fix styling issue with form input on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -112,6 +112,7 @@ button a {
 	font-family: Jost;
 	height: 2.5vh;
 	width: 50vw;
+	height: 4.5vh;
 }
 .form-text {
 	color: var(--menu-cta);
@@ -122,7 +123,7 @@ button a {
 	border-radius: 2px;
 	border: none;
 	resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
-	height: 20vh;
+	height: 30vh;
 }
 
 :focus {
